--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="sec">
 
         <h1>BEM-VINDO AO ACESSO DE ESTUDO</h1>
         <div class="div-form">
